--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "guozhen",
   "license": "GPL-3.0",
   "dependencies": {
+    "object-assign": "^4.1.0",
     "org-mode-parser": "^0.1.1"
   }
 }
