--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "plugin"
   ],
   "author": "guozhen",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "dependencies": {
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
